# TorxEngine

./: .gitignore  CMakeLists.txt  README.md  Torx.sln  create_new_project.py
Games/Sandbox/: CMakeLists.txt  imgui.ini
Games/Sandbox/src/: main.cpp
Projects/Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Projects/Sandbox/res/models/ceilingLamp1/: license.txt  scene.gltf
Projects/Sandbox/res/models/deagle/: license.txt  scene.gltf
Projects/Sandbox/res/models/zombie/: breakdance.fbx
Projects/Sandbox/res/scenes/: sponzascene.json  sponzascene4.json  testscene3.json
Projects/Sandbox/res/shaders/: cubemap.frag  gBufferShader.frag  voxelVisualization.geom
Projects/Sandbox/src/: main.cpp
Projects/template/: CMakeLists.txt
Projects/template/res/shaders/: SSAOBlur.frag  boxBlur.frag  cubemap.frag  gBufferShader.frag  icon.vert  lighting.frag  line.vert  pbrLightingTest.frag  pbrTestModelLoading.frag  pointShadowMap.vert  postProcessing.frag  testShader.frag  text.vert  voxelVisualization.geom  voxelVisualization.vert  voxelization.frag  voxelization.vert
Projects/template/src/: main.cpp
Torx/: CMakeLists.txt  Torx.vcxproj  Torx.vcxproj.filters  imgui.ini  pretty.json
Torx/include/: Engine.h
Torx/res/animations/zombie/: breakdance.gltf
Torx/res/fonts/fontawesome4/: IconsFontAwesome4.h
Torx/res/models/AR-15/: license.txt  scene.gltf
Torx/res/models/debugCube/: scene.gltf
Torx/res/models/dirtBlock/: license.txt  scene.gltf
Torx/res/models/victorianLamp/: scene.gltf
Torx/res/models/zombie/: zombie.gltf
Torx/res/scenes/: sponzascene.json  sponzascene2.json  sponzascene3.json  sponzascene4.json  testscene.json  testscene1.json  testscene2.json  testscene3.json
Torx/res/shaders/: SSR.frag  VXGI.frag  boxBlur.frag  brdfConvolution.frag  cubemap.frag  dirShadowMap.vert  gBufferShader.frag  gBufferShader.vert  gaussianBlur.frag  irradianceConvolution.frag  lighting.frag  lighting.vert  pbrLighting.frag  pbrLightingTest.frag  pbrTestModelLoading.frag  pointShadowMap.geom  postProcessing.frag  solidColor.frag  testShader.frag  testShader.vert  text.frag  text.vert  voxelVisualization.frag  voxelVisualization.geom  voxelVisualization.vert  voxelization.frag  voxelization.geom  voxelization.vert
Torx/src/: Application.cpp  Engine.cpp  Engine.h
Torx/src/AssetLoading/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  AssetManager.cpp  AssetManager.h  Bone.cpp  Bone.h  mesh.cpp  mesh.h  model.cpp  model.h
Torx/src/Components/: CAnimator.h  CCamera.h  CLight.h  CMesh.h  CModel.h  CNativeScript.h  CPlayer.h  CRigidBody.h  CSingleton_Input.h  CTransform.h  Transform.hpp
Torx/src/Core/: Common.cpp  Common.h  Common.hpp  ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  ECSCore.cpp  ECSCore.h  EntityManager.hpp  InputManager.cpp  InputManager.h  System.hpp  SystemManager.hpp  Types.hpp
Torx/src/Editor/: Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h
Torx/src/Game/: PlayerInputScript.hpp  TestController.hpp
Torx/src/Misc/: Shadows.h  TextRendering.cpp  TextRendering.h
Torx/src/Physics/: BulletDebugDrawer.cpp  BulletDebugDrawer.h  Raycast.cpp  Raycast.h
Torx/src/Rendering/: Bloom.h  Renderer.h  RenderingUtil.cpp  RenderingUtil.h  SSAO.cpp  SSAO.h  Shadows.h  TextRendering.cpp  TextRendering.h  model.cpp  model.h
Torx/src/Scene/: Scene.cpp  Scene.h
Torx/src/Systems/: AnimationSystem.cpp  AnimationSystem.h  GeneralInputSystem.cpp  GeneralInputSystem.h  LightSystem.cpp  LightSystem.h  NativeScriptSystem.cpp  NativeScriptSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h  RenderSystem.cpp  RenderSystem.h
Torx/src/UI/: UI.cpp  UI.h
Torx/src/util/: Camera.cpp  Camera.h  Keys.h  RenderingUtil.cpp  RenderingUtil.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  TextureLoader.cpp  TextureLoader.h  Util.cpp  Util.h  Window.cpp  Window.h
Torx/src/util/WindowsPlatform/: WindowsUtil.cpp  WindowsUtil.h
TorxEditor/: CMakeLists.txt
TorxEditor/res/shaders/: SSAO.frag  SSR.frag  SSR.vert  cubemap.vert  equirectangularToCubemap.frag  equirectangularToCubemap.vert  gBufferShader.frag  gaussianBlur.vert  icon.vert  lighting.frag  line.frag  pointShadowMap.frag  prefilterConvolution.frag  testShader.vert  text.frag
TorxEditor/src/: main.cpp
TorxEditor/src/Editor/: Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h
TorxEditor/src/UI/: UI.cpp  UI.h
